# mpi_hello_world_catkin

./: CMakeLists.txt  README.md  dependencies.rosinstall  linterconfig.yaml  package.xml
app/: mpi-hello-world-app.cc
include/mpi_hello_world/: hello-world-node.h  hello-world.h
share/: build_and_test  run_demo
src/: hello-world-node.cc
