<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>mpi_hello_world_catkin</name>
  <version>1.0.0</version>
  <description>MPI Hello World</description>
  <maintainer email="maplab-dev@mavt.ethz.ch">maplab-developers</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>glog_catkin</depend>
  <depend>gflags_catkin</depend>
</package>
